# agent-aletheia

./: CHAT_INTERFACE_README.md  DEVELOPMENT.md  README.md  aletheia_chat_frd.md  main.py  mnemosyne_prd.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: test.yml
agent_aletheia/: __init__.py
agent_aletheia/config/: __init__.py  topics.yaml
agent_aletheia/routes/: __init__.py  chat.py  ideas.py
agent_aletheia/services/: __init__.py  chat.py  ingestion.py  scoring.py
tests/: README.md
tests/integration/: test_chat_routes.py  test_conversation_coherence.py
tests/unit/: test_chat_service.py
