[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-aletheia"
version = "0.1.0"
description = "Idea Discovery Agent for Mnemosyne"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Stephen Peters"}
]

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "anthropic>=0.7.0",
    "httpx>=0.25.0",
    "beautifulsoup4>=4.12.0",
    "feedparser>=6.0.0",
    "PyPDF2>=3.0.0",
    "youtube-transcript-api>=0.6.0",
    "pyyaml>=6.0",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.12.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.setuptools.packages.find]
include = ["agent_aletheia*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = ["-v", "--cov=agent_aletheia"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501"]
